--- a/app/testing.ipynb
+++ b/app/testing.ipynb
@@ -9,29 +9,13 @@
     "const models = require('./models');\n",
     "const Seed = models.seed;\n",
     "const Wallet = models.wallet;\n",
+    "const utils = require(\"./app_utils\");\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function combined_traits(seed_model) {\n",
-    "    const ret = seed_model.trait.dataValues;\n",
-    "    const render = seed_model.render;\n",
-    "    ret[\"backgroundColor\"] = render.backgroundColor;\n",
-    "    ret[\"numColors\"] = render.numColors;\n",
-    "    ret[\"numPoint\"] = render.numPoints;\n",
-    "    ret[\"colorList\"] = render.colorList;\n",
-    "    return ret;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +24,7 @@
        "Promise { <pending> }"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -88,13 +72,13 @@
     "})\n",
     ".then((found) => {\n",
     "\n",
-    "   // console.log(found.get({plain:true}));\n",
+    "    console.log(found.get({plain:true}));\n",
     "\n",
     "    var s = {};\n",
     "    s[\"id\"] = found.id;\n",
     "    s[\"seed\"] = found.full_hexseed;\n",
     "    s[\"wallet\"] = found.wallet.address;\n",
-    "    s[\"traits\"] = combined_traits(found);\n",
+    "    s[\"traits\"] = utils.combined_traits(found);\n",
     "    console.log(s);\n",
     "   // console.log(foundUser.get().wallet);\n",
     "});\n",
