Added condensed seed utility and route.

--- a/app/testing.ipynb
+++ b/app/testing.ipynb
@@ -9,13 +9,12 @@
     "const models = require('./models');\n",
     "const Seed = models.seed;\n",
     "const Wallet = models.wallet;\n",
-    "const utils = require(\"./app_utils\");\n",
-    "\n"
+    "const utils = require(\"./app_utils\");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +23,7 @@
        "Promise { <pending> }"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -34,7 +33,65 @@
      "text": [
       "{\n",
       "  id: 1,\n",
-      "  seed: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf',\n",
+      "  full_hexseed: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf',\n",
+      "  wallet_id: 1,\n",
+      "  algorithm_hexseed: 'f0f1d6273a85ffff1061daaf',\n",
+      "  createdAt: 2022-10-27T19:36:08.000Z,\n",
+      "  updatedAt: 2022-10-27T19:36:08.000Z,\n",
+      "  wallet: {\n",
+      "    id: 1,\n",
+      "    address: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7',\n",
+      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
+      "    updatedAt: 2022-10-27T19:36:08.000Z\n",
+      "  },\n",
+      "  render: {\n",
+      "    id: 1,\n",
+      "    seed_id: 1,\n",
+      "    backgroundColor: 'Berlin Gray Blue',\n",
+      "    numColors: 6,\n",
+      "    numPoints: 14348,\n",
+      "    colorList: 'bIntenseBlue,bIntenseBlue2,bDimOrange,bCoolDarkGreen,bRed,bGrayBlue',\n",
+      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
+      "    updatedAt: 2022-10-27T19:36:08.000Z,\n",
+      "    output: {\n",
+      "      id: 1,\n",
+      "      location_id: 1,\n",
+      "      render_id: 1,\n",
+      "      filename: '2022-10-27T19:36:08.940Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf.png',\n",
+      "      pixelWidth: 2400,\n",
+      "      renderTime: null,\n",
+      "      createdAt: 2022-10-27T19:36:08.000Z,\n",
+      "      updatedAt: 2022-10-27T19:36:08.000Z,\n",
+      "      location: [Object]\n",
+      "    }\n",
+      "  },\n",
+      "  trait: {\n",
+      "    id: 1,\n",
+      "    seed_id: 1,\n",
+      "    version: 1,\n",
+      "    flowField: 'Random Radial',\n",
+      "    turbulence: 'Low',\n",
+      "    margin: 'Crisp',\n",
+      "    colorVariety: 'Medium',\n",
+      "    colorMode: 'Stacked',\n",
+      "    structure: 'Orbital',\n",
+      "    bullseyeRings1: 'On',\n",
+      "    bullseyeRings2: null,\n",
+      "    bullseyeRings3: 'Off',\n",
+      "    bullseyeRings7: 'Off',\n",
+      "    ringThickness: 'Thick',\n",
+      "    ringSize: 'Small',\n",
+      "    sizeVariety: 'Wild',\n",
+      "    colorPalette: 'Berlin',\n",
+      "    spacing: 'Dense',\n",
+      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
+      "    updatedAt: 2022-10-27T19:36:08.000Z\n",
+      "  }\n",
+      "}\n",
+      "{\n",
+      "  id: 1,\n",
+      "  full_hexseed: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf',\n",
+      "  algorithm_hexseed: 'f0f1d6273a85ffff1061daaf',\n",
       "  wallet: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7',\n",
       "  traits: {\n",
       "    id: 1,\n",
@@ -61,7 +118,13 @@
       "    numColors: 6,\n",
       "    numPoint: 14348,\n",
       "    colorList: 'bIntenseBlue,bIntenseBlue2,bDimOrange,bCoolDarkGreen,bRed,bGrayBlue'\n",
-      "  }\n",
+      "  },\n",
+      "  location_host: {\n",
+      "    host: 'StudioUltra',\n",
+      "    path: '/Volumes/Unicorn/qql_renders/renders_1'\n",
+      "  },\n",
+      "  filename: '2022-10-27T19:36:08.940Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf.png',\n",
+      "  pixel_width: 2400\n",
       "}\n"
      ]
     }
@@ -74,12 +137,13 @@
     "\n",
     "    console.log(found.get({plain:true}));\n",
     "\n",
-    "    var s = {};\n",
-    "    s[\"id\"] = found.id;\n",
-    "    s[\"seed\"] = found.full_hexseed;\n",
-    "    s[\"wallet\"] = found.wallet.address;\n",
-    "    s[\"traits\"] = utils.combined_traits(found);\n",
+    "    var s = utils.condense_seed(found);\n",
+    "    // s[\"id\"] = found.id;\n",
+    "    // s[\"seed\"] = found.full_hexseed;\n",
+    "    // s[\"wallet\"] = found.wallet.address;\n",
+    "    // s[\"traits\"] = utils.combined_traits(found);\n",
     "    console.log(s);\n",
+    "\n",
     "   // console.log(foundUser.get().wallet);\n",
     "});\n",
     "\n",
