--- a/app/testing.ipynb
+++ b/app/testing.ipynb
@@ -4,7 +4,32 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Cannot find module './models'\nRequire stack:\n- /Users/jazure/Development/qql-headless/[eval]",
+     "output_type": "error",
+     "traceback": [
+      "node:internal/modules/cjs/loader:998",
+      "  throw err;",
+      "  ^",
+      "",
+      "Error: Cannot find module './models'",
+      "Require stack:",
+      "- /Users/jazure/Development/qql-headless/[eval]",
+      "    at Module._resolveFilename (node:internal/modules/cjs/loader:995:15)",
+      "    at Module._load (node:internal/modules/cjs/loader:841:27)",
+      "    at Module.require (node:internal/modules/cjs/loader:1061:19)",
+      "    at require (node:internal/modules/cjs/helpers:103:18)",
+      "    at evalmachine.<anonymous>:1:16",
+      "    at Script.runInThisContext (node:vm:129:12)",
+      "    at Object.runInThisContext (node:vm:313:38)",
+      "    at run ([eval]:1020:15)",
+      "    at onRunRequest ([eval]:864:18)",
+      "    at onMessage ([eval]:828:13)"
+     ]
+    }
+   ],
    "source": [
     "const models = require('./models');\n",
     "const Seed = models.seed;\n",
@@ -14,121 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Promise { <pending> }"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  id: 1,\n",
-      "  full_hexseed: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf',\n",
-      "  wallet_id: 1,\n",
-      "  algorithm_hexseed: 'f0f1d6273a85ffff1061daaf',\n",
-      "  createdAt: 2022-10-27T19:36:08.000Z,\n",
-      "  updatedAt: 2022-10-27T19:36:08.000Z,\n",
-      "  wallet: {\n",
-      "    id: 1,\n",
-      "    address: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7',\n",
-      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
-      "    updatedAt: 2022-10-27T19:36:08.000Z\n",
-      "  },\n",
-      "  render: {\n",
-      "    id: 1,\n",
-      "    seed_id: 1,\n",
-      "    backgroundColor: 'Berlin Gray Blue',\n",
-      "    numColors: 6,\n",
-      "    numPoints: 14348,\n",
-      "    colorList: 'bIntenseBlue,bIntenseBlue2,bDimOrange,bCoolDarkGreen,bRed,bGrayBlue',\n",
-      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
-      "    updatedAt: 2022-10-27T19:36:08.000Z,\n",
-      "    output: {\n",
-      "      id: 1,\n",
-      "      location_id: 1,\n",
-      "      render_id: 1,\n",
-      "      filename: '2022-10-27T19:36:08.940Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf.png',\n",
-      "      pixelWidth: 2400,\n",
-      "      renderTime: null,\n",
-      "      createdAt: 2022-10-27T19:36:08.000Z,\n",
-      "      updatedAt: 2022-10-27T19:36:08.000Z,\n",
-      "      location: [Object]\n",
-      "    }\n",
-      "  },\n",
-      "  trait: {\n",
-      "    id: 1,\n",
-      "    seed_id: 1,\n",
-      "    version: 1,\n",
-      "    flowField: 'Random Radial',\n",
-      "    turbulence: 'Low',\n",
-      "    margin: 'Crisp',\n",
-      "    colorVariety: 'Medium',\n",
-      "    colorMode: 'Stacked',\n",
-      "    structure: 'Orbital',\n",
-      "    bullseyeRings1: 'On',\n",
-      "    bullseyeRings2: null,\n",
-      "    bullseyeRings3: 'Off',\n",
-      "    bullseyeRings7: 'Off',\n",
-      "    ringThickness: 'Thick',\n",
-      "    ringSize: 'Small',\n",
-      "    sizeVariety: 'Wild',\n",
-      "    colorPalette: 'Berlin',\n",
-      "    spacing: 'Dense',\n",
-      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
-      "    updatedAt: 2022-10-27T19:36:08.000Z\n",
-      "  }\n",
-      "}\n",
-      "{\n",
-      "  id: 1,\n",
-      "  full_hexseed: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf',\n",
-      "  algorithm_hexseed: 'f0f1d6273a85ffff1061daaf',\n",
-      "  wallet: '0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7',\n",
-      "  traits: {\n",
-      "    id: 1,\n",
-      "    seed_id: 1,\n",
-      "    version: 1,\n",
-      "    flowField: 'Random Radial',\n",
-      "    turbulence: 'Low',\n",
-      "    margin: 'Crisp',\n",
-      "    colorVariety: 'Medium',\n",
-      "    colorMode: 'Stacked',\n",
-      "    structure: 'Orbital',\n",
-      "    bullseyeRings1: 'On',\n",
-      "    bullseyeRings2: null,\n",
-      "    bullseyeRings3: 'Off',\n",
-      "    bullseyeRings7: 'Off',\n",
-      "    ringThickness: 'Thick',\n",
-      "    ringSize: 'Small',\n",
-      "    sizeVariety: 'Wild',\n",
-      "    colorPalette: 'Berlin',\n",
-      "    spacing: 'Dense',\n",
-      "    createdAt: 2022-10-27T19:36:08.000Z,\n",
-      "    updatedAt: 2022-10-27T19:36:08.000Z,\n",
-      "    backgroundColor: 'Berlin Gray Blue',\n",
-      "    numColors: 6,\n",
-      "    numPoint: 14348,\n",
-      "    colorList: 'bIntenseBlue,bIntenseBlue2,bDimOrange,bCoolDarkGreen,bRed,bGrayBlue'\n",
-      "  },\n",
-      "  location_host: {\n",
-      "    host: 'StudioUltra',\n",
-      "    path: '/Volumes/Unicorn/qql_renders/renders_1'\n",
-      "  },\n",
-      "  filename: '2022-10-27T19:36:08.940Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7df0f1d6273a85ffff1061daaf.png',\n",
-      "  pixel_width: 2400\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Seed.findOne({\n",
     "    where: {id: 1}, include: { all: true, nested: true} \n",
