--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -4,34 +4,43 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "const utils = require(\"../app/utils\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "Cannot find module '../app/utils'\nRequire stack:\n- /Users/jazure/Development/qql-headless/[eval]",
-     "output_type": "error",
-     "traceback": [
-      "node:internal/modules/cjs/loader:998",
-      "  throw err;",
-      "  ^",
-      "",
-      "Error: Cannot find module '../app/utils'",
-      "Require stack:",
-      "- /Users/jazure/Development/qql-headless/[eval]",
-      "    at Module._resolveFilename (node:internal/modules/cjs/loader:995:15)",
-      "    at Module._load (node:internal/modules/cjs/loader:841:27)",
-      "    at Module.require (node:internal/modules/cjs/loader:1061:19)",
-      "    at require (node:internal/modules/cjs/helpers:103:18)",
-      "    at evalmachine.<anonymous>:1:15",
-      "    at Script.runInThisContext (node:vm:129:12)",
-      "    at Object.runInThisContext (node:vm:313:38)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  flowField: 'Spiral',\n",
+      "  turbulence: 'High',\n",
+      "  margin: 'Wide',\n",
+      "  colorVariety: 'High',\n",
+      "  colorMode: 'Stacked',\n",
+      "  structure: 'Orbital',\n",
+      "  bullseyeRings1: 'Off',\n",
+      "  bullseyeRings3: 'Off',\n",
+      "  bullseyeRings7: 'On',\n",
+      "  ringThickness: 'Thick',\n",
+      "  ringSize: 'Medium',\n",
+      "  sizeVariety: 'Wild',\n",
+      "  colorPalette: 'Austin',\n",
+      "  spacing: 'Medium',\n",
+      "  version: 1\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "const utils = require(\"../app/utils\");"
+    "var t = utils.traitsFromNamed(\"qql_138\");\n",
+    "console.log(t);"
    ]
   }
  ],
