Added a randomPalette function

--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,15 @@
       "  colorPalette: 'Austin',\n",
       "  spacing: 'Medium',\n",
       "  version: 1\n",
-      "}\n"
+      "}\n",
+      "Austin\n"
      ]
     }
    ],
    "source": [
     "var t = utils.traitsFromNamed(\"qql_138\");\n",
-    "console.log(t);"
+    "console.log(t);\n",
+    "console.log(utils.randomPalette());"
    ]
   }
  ],
