--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
       "  spacing: 'Medium',\n",
       "  version: 1\n",
       "}\n",
-      "Austin\n"
+      "Seoul\n"
      ]
     }
    ],
