Rework the whole 'args' thing

--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,38 +11,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var t = utils.traitsFromNamed(\"qql_138\");\n",
+    "console.log(t);\n",
+    "console.log(utils.randomPalette());"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const { ArgumentParser } = require(\"argparse\");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_StoreAction(option_strings=[], dest='count', nargs=undefined, const=undefined, default=undefined, type='int', choices=undefined, help='The number of outputs to render', metavar=undefined)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "var parser = new ArgumentParser({ description: 'Bulk Render QQL outputs.' });\n",
+    "parser.add_argument(\"--output\", \"--o\", {help: \"The directory for the output files\", required: true});\n",
+    "parser.add_argument(\"--wallet\", \"--w\", {help: \"The ethereum wallet address (0x...)\", required: true});\n",
+    "parser.add_argument(\"--traits\", {help: \"The named traits to render for (do not inlude '.json')\", default: \"random\"});\n",
+    "parser.add_argument(\"--two_rings\", {help: \"Set to 'yes' to hack seed for 2-ring outputs\", type: Boolean, default: false});\n",
+    "parser.add_argument(\"--palette_override\", {help: \"Set to a palette name or 'random' to override the palette in the named 'traits'\"});\n",
+    "parser.add_argument(\"--use_db\", {help: \"Set to 'yes' to store the seed database into the database\", type: Boolean, default: false});\n",
+    "parser.add_argument(\"--render_host\", {help: \"The hostname to use for saving to the database. Ignored when use-db is false.\"});\n",
+    "parser.add_argument(\"count\", {type: 'int', help: \"The number of outputs to render\"});\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  flowField: 'Spiral',\n",
-      "  turbulence: 'High',\n",
-      "  margin: 'Wide',\n",
-      "  colorVariety: 'High',\n",
-      "  colorMode: 'Stacked',\n",
-      "  structure: 'Orbital',\n",
-      "  bullseyeRings1: 'Off',\n",
-      "  bullseyeRings3: 'Off',\n",
-      "  bullseyeRings7: 'On',\n",
-      "  ringThickness: 'Thick',\n",
-      "  ringSize: 'Medium',\n",
-      "  sizeVariety: 'Wild',\n",
-      "  colorPalette: 'Austin',\n",
-      "  spacing: 'Medium',\n",
-      "  version: 1\n",
-      "}\n",
-      "Seoul\n"
+      "Namespace(output='./tmp', wallet='0xblah', traits='random', two_rings=false, palette_override=undefined, use_db=true, render_host=undefined, count=10)\n",
+      "./tmp\n",
+      "false\n"
      ]
     }
    ],
    "source": [
-    "var t = utils.traitsFromNamed(\"qql_138\");\n",
-    "console.log(t);\n",
-    "console.log(utils.randomPalette());"
+    "var args = [\"--output\", \"./tmp\", \"--wallet\", \"0xblah\", \"--use_db\", \"yes\", 10];\n",
+    "\n",
+    "a = parser.parse_args(args);\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log(a.output);\n",
+    "console.log(a.two_rings);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "args = [\"-h\"];\n",
+    "console.log(parser.parse_args(args));\n"
    ]
   }
  ],
