New cmdline args

--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "_StoreAction(option_strings=[], dest='count', nargs=undefined, const=undefined, default=undefined, type='int', choices=undefined, help='The number of outputs to render', metavar=undefined)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,27 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Namespace(output='./tmp', wallet='0xblah', traits='random', two_rings=false, palette_override=undefined, use_db=true, render_host=undefined, count=10)\n",
+      "Namespace(output='./tmp', wallet='0xblah', traits='random', two_rings=false, palette_override=undefined, use_db=false, render_host=undefined, count=10)\n",
       "./tmp\n",
+      "false\n",
       "false\n"
      ]
     }
    ],
    "source": [
-    "var args = [\"--output\", \"./tmp\", \"--wallet\", \"0xblah\", \"--use_db\", \"yes\", 10];\n",
+    "var args = [\"--output\", \"./tmp\", \"--wallet\", \"0xblah\", \"--use_db\", false, 10];\n",
     "\n",
     "a = parser.parse_args(args);\n",
     "console.log(a);\n",
     "\n",
     "console.log(a.output);\n",
-    "console.log(a.two_rings);\n"
+    "console.log(a.two_rings);\n",
+    "console.log(a.use_db);\n"
    ]
   },
   {
@@ -105,7 +107,7 @@
    "file_extension": ".js",
    "mimetype": "application/javascript",
    "name": "javascript",
-   "version": "18.11.0"
+   "version": "16.13.2"
   },
   "orig_nbformat": 4
  },
