--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,20 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "_StoreAction(option_strings=[], dest='count', nargs=undefined, const=undefined, default=undefined, type='int', choices=undefined, help='The number of outputs to render', metavar=undefined)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "var parser = new ArgumentParser({ description: 'Bulk Render QQL outputs.' });\n",
@@ -60,20 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Namespace(output='./tmp', wallet='0xblah', traits='random', two_rings=false, palette_override=undefined, use_db=false, render_host=undefined, count=10)\n",
-      "./tmp\n",
-      "false\n",
-      "false\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var args = [\"--output\", \"./tmp\", \"--wallet\", \"0xblah\", \"--use_db\", false, 10];\n",
     "\n",
@@ -87,13 +65,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ref *1> Request {\n",
+       "  _events: [Object: null prototype] {\n",
+       "    error: [Function: bound ],\n",
+       "    complete: [Function: bound ],\n",
+       "    pipe: [Function (anonymous)]\n",
+       "  },\n",
+       "  _eventsCount: 3,\n",
+       "  _maxListeners: undefined,\n",
+       "  uri: Url {\n",
+       "    protocol: 'https:',\n",
+       "    slashes: true,\n",
+       "    auth: null,\n",
+       "    host: 'token.qql.art',\n",
+       "    port: 443,\n",
+       "    hostname: 'token.qql.art',\n",
+       "    hash: null,\n",
+       "    search: null,\n",
+       "    query: null,\n",
+       "    pathname: '/qql/51',\n",
+       "    path: '/qql/51',\n",
+       "    href: 'https://token.qql.art/qql/51'\n",
+       "  },\n",
+       "  callback: [Function (anonymous)],\n",
+       "  readable: true,\n",
+       "  writable: true,\n",
+       "  _qs: Querystring {\n",
+       "    request: [Circular *1],\n",
+       "    lib: {\n",
+       "      formats: [Object],\n",
+       "      parse: [Function (anonymous)],\n",
+       "      stringify: [Function (anonymous)]\n",
+       "    },\n",
+       "    useQuerystring: undefined,\n",
+       "    parseOptions: {},\n",
+       "    stringifyOptions: {}\n",
+       "  },\n",
+       "  _auth: Auth {\n",
+       "    request: [Circular *1],\n",
+       "    hasAuth: false,\n",
+       "    sentAuth: false,\n",
+       "    bearerToken: null,\n",
+       "    user: null,\n",
+       "    pass: null\n",
+       "  },\n",
+       "  _oauth: OAuth { request: [Circular *1], params: null },\n",
+       "  _multipart: Multipart {\n",
+       "    request: [Circular *1],\n",
+       "    boundary: 'f323ad33-a841-4e4c-84bd-88a5183b6127',\n",
+       "    chunked: false,\n",
+       "    body: null\n",
+       "  },\n",
+       "  _redirect: Redirect {\n",
+       "    request: [Circular *1],\n",
+       "    followRedirect: true,\n",
+       "    followRedirects: true,\n",
+       "    followAllRedirects: false,\n",
+       "    followOriginalHttpMethod: false,\n",
+       "    allowRedirect: [Function (anonymous)],\n",
+       "    maxRedirects: 10,\n",
+       "    redirects: [],\n",
+       "    redirectsFollowed: 0,\n",
+       "    removeRefererHeader: false\n",
+       "  },\n",
+       "  _tunnel: Tunnel {\n",
+       "    request: [Circular *1],\n",
+       "    proxyHeaderWhiteList: [\n",
+       "      'accept',           'accept-charset',\n",
+       "      'accept-encoding',  'accept-language',\n",
+       "      'accept-ranges',    'cache-control',\n",
+       "      'content-encoding', 'content-language',\n",
+       "      'content-location', 'content-md5',\n",
+       "      'content-range',    'content-type',\n",
+       "      'connection',       'date',\n",
+       "      'expect',           'max-forwards',\n",
+       "      'pragma',           'referer',\n",
+       "      'te',               'user-agent',\n",
+       "      'via'\n",
+       "    ],\n",
+       "    proxyHeaderExclusiveList: []\n",
+       "  },\n",
+       "  headers: { host: 'token.qql.art', accept: 'application/json' },\n",
+       "  setHeader: [Function (anonymous)],\n",
+       "  hasHeader: [Function (anonymous)],\n",
+       "  getHeader: [Function (anonymous)],\n",
+       "  removeHeader: [Function (anonymous)],\n",
+       "  method: 'GET',\n",
+       "  localAddress: undefined,\n",
+       "  pool: {},\n",
+       "  dests: [],\n",
+       "  __isRequestRequest: true,\n",
+       "  _callback: [Function (anonymous)],\n",
+       "  proxy: null,\n",
+       "  tunnel: true,\n",
+       "  setHost: true,\n",
+       "  originalCookieHeader: undefined,\n",
+       "  _disableCookies: true,\n",
+       "  _jar: undefined,\n",
+       "  port: 443,\n",
+       "  host: 'token.qql.art',\n",
+       "  path: '/qql/51',\n",
+       "  _json: true,\n",
+       "  httpModule: {\n",
+       "    Agent: [Function: Agent],\n",
+       "    globalAgent: Agent {\n",
+       "      _events: [Object: null prototype],\n",
+       "      _eventsCount: 2,\n",
+       "      _maxListeners: undefined,\n",
+       "      defaultPort: 443,\n",
+       "      protocol: 'https:',\n",
+       "      options: [Object: null prototype],\n",
+       "      requests: [Object: null prototype] {},\n",
+       "      sockets: [Object: null prototype] {},\n",
+       "      freeSockets: [Object: null prototype] {},\n",
+       "      keepAliveMsecs: 1000,\n",
+       "      keepAlive: false,\n",
+       "      maxSockets: Infinity,\n",
+       "      maxFreeSockets: 256,\n",
+       "      scheduling: 'lifo',\n",
+       "      maxTotalSockets: Infinity,\n",
+       "      totalSocketCount: 0,\n",
+       "      maxCachedSessions: 100,\n",
+       "      _sessionCache: [Object],\n",
+       "      [Symbol(kCapture)]: false\n",
+       "    },\n",
+       "    Server: [Function: Server],\n",
+       "    createServer: [Function: createServer],\n",
+       "    get: [Function: get],\n",
+       "    request: [Function: request]\n",
+       "  },\n",
+       "  agentClass: [Function: Agent],\n",
+       "  agent: Agent {\n",
+       "    _events: [Object: null prototype] {\n",
+       "      free: [Function (anonymous)],\n",
+       "      newListener: [Function: maybeEnableKeylog]\n",
+       "    },\n",
+       "    _eventsCount: 2,\n",
+       "    _maxListeners: undefined,\n",
+       "    defaultPort: 443,\n",
+       "    protocol: 'https:',\n",
+       "    options: [Object: null prototype] { path: null },\n",
+       "    requests: [Object: null prototype] {},\n",
+       "    sockets: [Object: null prototype] {},\n",
+       "    freeSockets: [Object: null prototype] {},\n",
+       "    keepAliveMsecs: 1000,\n",
+       "    keepAlive: false,\n",
+       "    maxSockets: Infinity,\n",
+       "    maxFreeSockets: 256,\n",
+       "    scheduling: 'lifo',\n",
+       "    maxTotalSockets: Infinity,\n",
+       "    totalSocketCount: 0,\n",
+       "    maxCachedSessions: 100,\n",
+       "    _sessionCache: { map: {}, list: [] },\n",
+       "    [Symbol(kCapture)]: false\n",
+       "  },\n",
+       "  [Symbol(kCapture)]: false\n",
+       "}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n",
+      "{\n",
+      "  attributes: [\n",
+      "    { trait_type: 'Flow Field', value: 'Vertical' },\n",
+      "    { trait_type: 'Turbulence', value: 'High' },\n",
+      "    { trait_type: 'Margin', value: 'Wide' },\n",
+      "    { trait_type: 'Color Variety', value: 'High' },\n",
+      "    { trait_type: 'Color Mode', value: 'Stacked' },\n",
+      "    { trait_type: 'Structure', value: 'Shadows' },\n",
+      "    { trait_type: 'Ring Thickness', value: 'Thick' },\n",
+      "    { trait_type: 'Ring Size', value: 'Small' },\n",
+      "    { trait_type: 'Size Variety', value: 'Variable' },\n",
+      "    { trait_type: 'Color Palette', value: 'Fidenza' },\n",
+      "    { trait_type: 'Spacing', value: 'Dense' },\n",
+      "    { trait_type: 'Background Color', value: 'Fidenza Newsprint' },\n",
+      "    { trait_type: 'Parametric Artist', value: '‍‌‌‌‍3.eth' },\n",
+      "    { trait_type: 'Mint Period', value: 'Day 1' }\n",
+      "  ],\n",
+      "  description: 'QQL is a collaborative experiment in generative art by Tyler Hobbs and Dandelion Wist. This piece was co-created with ‍‌‌‌‍3.eth.',\n",
+      "  image: 'https://img.qql.art/canon/51.png',\n",
+      "  name: 'QQL #51',\n",
+      "  parametricArtist: '0x29b9D8b112F97b637C134579b9D10a4F4fCac7ec',\n",
+      "  renderData: {\n",
+      "    backgroundColor: 'Fidenza Newsprint',\n",
+      "    colorsUsed: [ 'fNewsprint', 'fDarkRed', 'fOrange', 'fRed', 'fBrown' ],\n",
+      "    numColors: 5,\n",
+      "    numPoints: 16480\n",
+      "  },\n",
+      "  seed: '0x29b9d8b112f97b637c134579b9d10a4f4fcac7ece91605afcf2effff10d11352',\n",
+      "  traits: {\n",
+      "    bullseyeRings1: 'On',\n",
+      "    bullseyeRings3: 'On',\n",
+      "    bullseyeRings7: 'On',\n",
+      "    colorMode: 'Stacked',\n",
+      "    colorPalette: 'Fidenza',\n",
+      "    colorVariety: 'High',\n",
+      "    flowField: 'Vertical',\n",
+      "    margin: 'Wide',\n",
+      "    ringSize: 'Small',\n",
+      "    ringThickness: 'Thick',\n",
+      "    sizeVariety: 'Variable',\n",
+      "    spacing: 'Dense',\n",
+      "    structure: 'Shadows',\n",
+      "    turbulence: 'High',\n",
+      "    version: 1\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
+    "const request = require('request');\n",
     "\n",
-    "args = [\"-h\"];\n",
-    "console.log(parser.parse_args(args));\n"
+    "let url = 'https://token.qql.art/qql/51';\n",
+    "let options = {json: true};\n",
+    "\n",
+    "var token = 51;\n",
+    "request(url, options, (error, res, body) => {\n",
+    "    if (error) {\n",
+    "        return  console.log(error)\n",
+    "    };\n",
+    "    if (!error && res.statusCode == 200) {\n",
+    "        console.log(\"Success!\");\n",
+    "        console.log(body);\n",
+    "       // console.log(JSON.stringify(body, null, 2));\n",
+    "    };\n",
+    "});\n"
    ]
   }
  ],
