--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -71,20 +71,43 @@
     {
      "data": {
       "text/plain": [
-       "[AsyncFunction (anonymous)]"
+       "Promise { <pending> }"
       ]
      },
      "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  bullseyeRings1: 'On',\n",
+      "  bullseyeRings3: 'On',\n",
+      "  bullseyeRings7: 'On',\n",
+      "  colorMode: 'Stacked',\n",
+      "  colorPalette: 'Fidenza',\n",
+      "  colorVariety: 'High',\n",
+      "  flowField: 'Vertical',\n",
+      "  margin: 'Wide',\n",
+      "  ringSize: 'Small',\n",
+      "  ringThickness: 'Thick',\n",
+      "  sizeVariety: 'Variable',\n",
+      "  spacing: 'Dense',\n",
+      "  structure: 'Shadows',\n",
+      "  turbulence: 'High',\n",
+      "  version: 1\n",
+      "}\n"
+     ]
     }
    ],
    "source": [
     "var token = 51;\n",
-    "(async function(){\n",
-    "    var t = await utils.traitsFromToken(token);\n",
-    "    console.log(t)\n",
-    "});\n"
+    "utils.traitsFromToken(token)\n",
+    "    .then(function(r) {\n",
+    "        console.log(r);\n",
+    "    });\n"
    ]
   }
  ],
@@ -98,7 +121,7 @@
    "file_extension": ".js",
    "mimetype": "application/javascript",
    "name": "javascript",
-   "version": "18.11.0"
+   "version": "16.13.2"
   },
   "orig_nbformat": 4
  },
