- Added some more named traits

--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -11,14 +11,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Re-rendering webp file for seed: 0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7dfeaeba489d23ffff1026024f\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Promise { <pending> }"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  backgroundColor: 'Austin Blue',\n",
+      "  colorsUsed: [ 'aPink', 'aOrange3', 'aDarkBrown3', 'aLightGreen', 'aAquamarine3' ],\n",
+      "  numPoints: 12746,\n",
+      "  numColors: 5\n",
+      "}\n",
+      "Writing webp data to: /Volumes/G-RAID1/qql-outputs/tmp/2022-11-11T20:21:46.211Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7dfeaeba489d23ffff1026024f.png.webp\n"
+     ]
+    }
+   ],
    "source": [
-    "var t = utils.traitsFromNamed(\"qql_138\");\n",
-    "console.log(t);\n",
-    "console.log(utils.randomPalette());"
+    "var f = \"2022-11-11T20:21:46.211Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7dfeaeba489d23ffff1026024f.png.webp\";\n",
+    "var tmpPath = \"/Volumes/G-RAID1/qql-outputs/tmp\"\n",
+    "utils.reRenderFile(tmpPath, f, 1200);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -65,43 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Promise { <pending> }"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  bullseyeRings1: 'On',\n",
-      "  bullseyeRings3: 'On',\n",
-      "  bullseyeRings7: 'On',\n",
-      "  colorMode: 'Stacked',\n",
-      "  colorPalette: 'Fidenza',\n",
-      "  colorVariety: 'High',\n",
-      "  flowField: 'Vertical',\n",
-      "  margin: 'Wide',\n",
-      "  ringSize: 'Small',\n",
-      "  ringThickness: 'Thick',\n",
-      "  sizeVariety: 'Variable',\n",
-      "  spacing: 'Dense',\n",
-      "  structure: 'Shadows',\n",
-      "  turbulence: 'High',\n",
-      "  version: 1\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var token = 51;\n",
     "utils.traitsFromToken(token)\n",
