Support for bg-color_override

--- a/scripts/testing_nb.ipynb
+++ b/scripts/testing_nb.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Re-rendering webp file for seed: 0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7dfeaeba489d23ffff1026024f\n"
+      "Re-rendering webp file for seed: 0xed884d09749a358b31b384876c086c4bd88902872dc508156464ffff1129cd56\n"
      ]
     },
     {
@@ -27,7 +27,7 @@
        "Promise { <pending> }"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -36,17 +36,17 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  backgroundColor: 'Austin Blue',\n",
-      "  colorsUsed: [ 'aPink', 'aOrange3', 'aDarkBrown3', 'aLightGreen', 'aAquamarine3' ],\n",
-      "  numPoints: 12746,\n",
-      "  numColors: 5\n",
+      "  backgroundColor: 'Miami White',\n",
+      "  colorsUsed: [ 'mYellow', 'mPurple', 'mOrange', 'mTeal' ],\n",
+      "  numPoints: 10070,\n",
+      "  numColors: 4\n",
       "}\n",
-      "Writing webp data to: /Volumes/G-RAID1/qql-outputs/tmp/2022-11-11T20:21:46.211Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7dfeaeba489d23ffff1026024f.png.webp\n"
+      "Writing webp data to: /Volumes/G-RAID1/qql-outputs/tmp/2022-11-15T22:06:47.895Z-0xed884d09749a358b31b384876c086c4bd88902872dc508156464ffff1129cd56.png.webp\n"
      ]
     }
    ],
    "source": [
-    "var f = \"2022-11-11T20:21:46.211Z-0x37b15e06ad0f4520ccdd8c2557d2a28da0354f7dfeaeba489d23ffff1026024f.png.webp\";\n",
+    "var f = \"2022-11-15T22:06:47.895Z-0xed884d09749a358b31b384876c086c4bd88902872dc508156464ffff1129cd56.png.webp\";\n",
     "var tmpPath = \"/Volumes/G-RAID1/qql-outputs/tmp\"\n",
     "utils.reRenderFile(tmpPath, f, 1200);"
    ]
@@ -110,6 +110,35 @@
     "    .then(function(r) {\n",
     "        console.log(r);\n",
     "    });\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "var renderData = {\n",
+    "    backgroundColor: \"Fidenza Dark Blue\",\n",
+    "    colorsUsed: [\n",
+    "      \"fOrange\",\n",
+    "      \"fPaleBlue\",\n",
+    "      \"fYellow\",\n",
+    "      \"fExtraDarkBlue\"\n",
+    "    ],\n",
+    "    numPoints: 30486,\n",
+    "    numColors: 4\n",
+    "  };\n",
+    "\n",
+    "console.log (renderData[\"colorsUsed\"].includes(\"fYellow\"));"
    ]
   }
  ],
