Beginning of simple search API

--- a/app/testing.ipynb
+++ b/app/testing.ipynb
@@ -34,13 +34,31 @@
     "\n",
     "   // console.log(foundUser.get().wallet);\n",
     "});\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "renders_6\n"
+     ]
+    }
+   ],
+   "source": [
+    "var fp = \"/Volumes/G-RAID1/qql-outputs/renders_6\";\n",
+    "var hl = \"qql-outputs\";\n",
     "\n",
-    "// Wallet.findOne({\n",
-    "//     where: {id: 1}, include: \"seeds\"\n",
-    "// })\n",
-    "// .then((found) => {\n",
-    "//     console.log(found.seeds.length);\n",
-    "// });\n"
+    "var lf = fp.substring(\n",
+    "    fp.lastIndexOf(hl) + hl.length+1\n",
+    ");\n",
+    "\n",
+    "console.log(lf);"
    ]
   }
  ],
