--- a/app/testing.ipynb
+++ b/app/testing.ipynb
@@ -60,6 +60,34 @@
     "\n",
     "console.log(lf);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function randomDegrees() {\n",
+    "    return Math.floor(Math.random() * (360-1) + 1)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "152\n"
+     ]
+    }
+   ],
+   "source": [
+    "console.log(randomDegrees());"
+   ]
   }
  ],
  "metadata": {
@@ -72,7 +100,7 @@
    "file_extension": ".js",
    "mimetype": "application/javascript",
    "name": "javascript",
-   "version": "18.11.0"
+   "version": "18.13.0"
   },
   "orig_nbformat": 4,
   "vscode": {
